# dynamic_aviation_pricing_model

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: README.md  streamlit_app.py
app/components/: __init__.py  charts.py  data_loader.py  formatting.py  text_blocks.py  ui.py
app/pages/: 1_Project_Overview.py  2_How_the_Model_Works.py  3_Policies.py  4_Scenarios_and_Findings.py  5_Stress_Test_Overbooking.py  6_Methodology_and_Limitations.py
configs/: base_config.yaml  route_shorthaul_default.yaml
latex/: README.md  report.tex
notebooks/: 01_parameter_validation.ipynb  02_single_flight_debug.ipynb
reports/bump_check/: profit_delta_vs_static.csv  scenario_policy_summary.csv  winner_compact.csv  winners_detail.csv
reports/chat_exp/: README.md  key_results.md  limitations.md  methodology.md
reports/final/: README.md  assumptions_and_limitations.md  executive_summary.md  key_findings.md  methodology.md  scenario_definitions.md
reports/scenario_run_2026/: profit_delta_vs_static.csv  scenario_policy_summary.csv  winner_compact.csv  winners_detail.csv
reports/validation/: validation_edge_cases.csv  validation_monte_carlo_stability.csv  validation_summary.md  (+7 more)
tests/: test_arrivals.py  test_booking_curve.py  test_competitor_response.py  test_config.py  test_conversion.py  test_engine.py  test_entities.py  test_fare_buckets.py  test_metrics.py  test_no_show.py  test_overbooking.py  test_policy_comparison.py  test_pricing_policies.py  test_report_plots.py  test_runner.py  test_scenario_comparison.py  test_segment_calibration.py  test_sensitivity.py
(+73 files in other folders)
